@@ -151,7 +151,7 @@ class netboot2_target(generic_stage_target):
 
 	def set_action_sequence(self):
 	    self.settings["action_sequence"]=["unpack","unpack_snapshot","config_profile_link",
-	    				"setup_confdir","bind","chroot_setup",\
+	    				"setup_confdir","portage_overlay","bind","chroot_setup",\
 					"setup_environment","build_packages","root_overlay",\
 					"copy_files_to_image","setup_overlay","build_kernel","move_kernels",\
 					"remove","empty","unbind","clean","clear_autoresume"]
