@@ -2,6 +2,14 @@
 # $Id: $
 
   17 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/netboot2_target.py, targets/netboot2/netboot2-copyfile.sh,
+  targets/support/netboot2-final.sh:
+  Added a patch from Andrew Gaffney <agaffney@gentoo.org> on bug #174635 to
+  fix a minor bug in System.map copying, add portage_overlay support, and adds
+  the ability to use globbing in the package file lists for the netboot2
+  target.
+
+  17 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   +targets/netboot2/nb-busybox.cf:
   Added nb-busybox.cf to the netboot2 target for bug #174298.
 
